--- a/ModulComunicatie/res/layout/activity_main.xml
+++ b/ModulComunicatie/res/layout/activity_main.xml
@@ -60,4 +60,16 @@
         android:layout_marginTop="34dp"
         android:text="@string/rezultat_httpGet" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/editText1"
+        android:background="#FF0000"
+        android:text="@string/conectat"
+        android:textColor="#FFF"
+        android:textSize="18sp" />
+
 </RelativeLayout>
