--- a/ModulRplus/res/menu/main.xml
+++ b/ModulRplus/res/menu/main.xml
@@ -8,5 +8,12 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    
+      <item
+        android:id="@+id/action_settings2"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/action_settings2"
+        android:icon="@drawable/ic_launcher"/>
 
 </menu>
