--- a/ModulRplus/res/layout/activity_main.xml
+++ b/ModulRplus/res/layout/activity_main.xml
@@ -98,10 +98,21 @@
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignRight="@+id/progressBar1"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/rezultat_httpGet"
         android:textColor="@color/Alb" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/button1"
+        android:layout_toRightOf="@+id/button1"
+        android:contentDescription="@string/content_description_poza"
+        android:minHeight="100dp"
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
