Nume aplicatie client
modificat nume aplicatia client

--- a/Rplus/res/layout/activity_main.xml
+++ b/Rplus/res/layout/activity_main.xml
@@ -7,16 +7,6 @@
     tools:context="com.rplus.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="34dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
@@ -46,7 +36,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText2"
         android:layout_marginLeft="20dp"
-        android:text="@string/text_button" />
+        android:text="@string/text_button"
+        android:textColor="@color/alb" />
 
     <Button
         android:id="@+id/button1"
@@ -56,15 +47,7 @@
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentRight="true"
         android:layout_marginRight="17dp"
-        android:text="@string/buton1" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/button2"
-        android:text="@string/text1"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/buton1"
+        android:textColor="@color/alb" />
 
 </RelativeLayout>
